# unicode-search

./: .eslintignore  .eslintrc  .gitattributes  .gitignore  .prettierignore  .prettierrc.yaml  .travis.yml  Cargo.toml  LICENSE  README.md  TODO  babel.config.js  deploy.sh  gulpfile.js  jsconfig.json  package-lock.json  package.json  rust-toolchain  rust-toolchain.toml  tsconfig.json  tsconfig.webpack.json  tslint.json  webpack.config.js
.github/workflows/: Main.yml  deploy.yml  rust.yml
client/: app.js  index.html  names.json  out  sw.js
client/css/: app.css
client/js/: app.js  char-entry.jsx  chars.jsx  decompress.js  entry.jsx  files.js  index.js  index.jsx  input-bar.jsx  resources.js  search-entry.jsx  search.js  search.jsx  wasm.js  worker.js
client/js/search/: create-result.js  files.js  load-files.js  pool.js  update-results.js  wasm.js
client/js/search/__tests__/: update-results.js
client/js/util/: indices-to-ranges.js  split-array.js
client/json/: blocks_hex.json  names.json
data/: README.md  blocks.awk  generate.js  names.awk
server/: Cargo.toml  server.js
server/src/: codepoint.rs  main.rs
server/templates/: codepoint.html  hello.html  index.html  search.html
server/views/: index.ejs  search.ejs
shared/: Cargo.toml
shared/src/: lib.rs
src/: bitset.rs  decoder.rs  files.ts  index.css  index.ejs  index.html  index.js  lib.rs  main.rs  search.rs  sw.js  table.rs  tsconfig.base.json  types.d.ts
src/css/: app.css
src/data/: blocks.ts  names.ts
src/index/: index.ts  tsconfig.json
src/js/: files.js  index.js  index.jsx  index.ts  resources.js  search-entry.jsx  search-pool.js  search.jsx  worker.js  worker.ts
src/js/util/: indices-to-ranges.js
src/json/: blocks.json  names.json
src/pages/: index.html.jsx  search.html.jsx  shared.jsx
src/shared/: memory.ts  mutex.ts
src/shared/data/: blocks.ts
src/test_data/: combined.txt  mod.rs
src/ts/: index.ts  initialiser.ts  messages.ts  state.ts  tsconfig.json  util.ts  worker.ts
src/ts/data/: blocks.ts  names.ts
src/ts/index/: index.ts
src/ts/ui/: char.ts  dom.ts  index.ts  lazy.ts
src/ts/worker/: caches.ts  communicator.ts  index.ts  initialiser.ts  messages.ts  receivers.ts  search.ts  senders.ts  state.ts  tsconfig.json  worker.ts
src/worker/: coordinator.ts  fuzzy.ts  tsconfig.json
src/worker/fuzzy/: fuzzy.ts
test/: index.html  index.js  worker.js
utf/: Cargo.toml
utf/src/: decoder.rs  lib.rs  table.rs
wasm/: Cargo.toml
wasm/src/: lib.rs
