[package]
name = "utf"
version = "0.0.0"
authors = ["Alex Macleod <alex@macleod.io>"]
edition = "2018"

[lib]
crate-type = ["cdylib", "lib"]

[[bin]]
name = "gen"
required-features = ["gen"]

[features]
default = []
gen = ["byteorder", "ucd-raw"]

[dependencies]
bincode = "1"
console_error_panic_hook = "0.1"
fuzzy-matcher = "0.3"
serde = { version = "1", features = ["derive"] }
wasm-bindgen = "0.2"

byteorder = { version = "1", optional = true }
ucd-raw = { version = "0.5", optional = true }
