[package]
name = "wasm"
version = "0.1.0"
authors = ["Alex Macleod <alex@macleod.io>"]
edition = "2021"

[lib]
crate-type = ["cdylib", "lib"]

[dependencies]
console_error_panic_hook = "0.1.7"
ranges = "0.3.3"
wasm-bindgen = "0.2.78"

[dev-dependencies]
proptest = "1"
regex = "1"

[workspace]
members = ["gen"]
