[package]
name = "wasm"
version = "0.1.0"
authors = ["Alex Macleod <alex@macleod.io>"]
edition = "2021"

[lib]
crate-type = ["cdylib", "lib"]

[dependencies]
console_error_panic_hook = "0.1.7"
ranges = "0.4.0"
wasm-bindgen = "0.2.79"

[dev-dependencies]
proptest = "1.0.0"
regex = "1.5.5"

[workspace]
members = ["gen"]
