[package]
name = "server"
version = "0.1.0"
authors = ["Alex Macleod <alex@macleod.io>"]
edition = "2018"
publish = false

[dependencies]
anyhow = "1.0.28"
askama = { version = "0.9", features = ["with-rocket"] }
rocket = { version = "0.4", default-features = false }
rocket_contrib = { version = "0.4", default-features = false, features = ["serve"] }
serde_json = "1"
