[package]
name = "shared"
version = "0.1.0"
authors = ["Alex Macleod <alex@macleod.io>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
fuzzy-matcher = "0.3"

bincode = { version = "1", optional = true }
serde = { version = "1", features = ["derive"], optional = true }
wasm-bindgen = { version = "0.2", optional = true }

[features]
wasm = ["bincode", "serde", "wasm-bindgen"]
